--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <button>LL</button>
+        <button>puto el que lo lea</button>
         <div>TODO write content</div>
     </body>
 </html>
