--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+                <button>puto el camilo</button>
+
         <button>puto el que lo lea</button>
         <div>TODO write content</div>
     </body>
